--- a/ddp-workspace/projects/ddp-pancan/src/app/components/about-us/about-us.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/about-us/about-us.component.html
@@ -1,1 +1,4 @@
-<app-anchors-page source="App.AboutUs" [route]="route"></app-anchors-page>
+<app-anchors-page
+    source="App.AboutUs"
+    [route]="route">
+</app-anchors-page>
