--- a/ddp-workspace/projects/ddp-pancan/src/app/components/anchors-page/anchors-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/anchors-page/anchors-page.component.html
@@ -12,17 +12,34 @@
     <section [id]="anchorLabel + i"
              *ngFor="let section of (source + '.Sections') | translate; let i = index;"
              class="section">
-        <div class="section__content" [class.column-direction]="section.PeopleList?.length">
+        <div class="section__content"
+             [class.column-direction]="section.PeopleList?.length">
             <h3 class="section__title static-page-title">{{section.Title}}</h3>
 
-            <div class="section__description" *ngIf="section.Paragraphs?.length">
-                <ng-container *ngFor="let paragraph of section.Paragraphs">
-                    <p class="section__text static-page-paragraph-text" [innerHTML]="paragraph" routeTransformer></p>
-                </ng-container>
+            <div class="section__description" *ngIf="section.Paragraphs?.length || section.Examples">
+                <div *ngIf="section.Paragraphs?.length">
+                    <ng-container *ngFor="let paragraph of section.Paragraphs">
+                        <p class="section__text static-page-paragraph-text" [innerHTML]="paragraph" routeTransformer></p>
+                    </ng-container>
+                </div>
 
                 <!--hard-coded image as an exception-->
                 <img *ngIf="section.ImageAlt" class="section__img-milestones" lazy-resource src="assets/images/timeline.png"
                      [alt]="section.ImageAlt">
+
+                <div class="section__examples static-page-paragraph-text" *ngIf="section.Examples">
+                    <b id="examples-label">{{section.Examples.Title}}</b>
+                    <ul aria-labelledby="examples-label">
+                        <li *ngFor="let link of section.Examples.Links; let i = index">
+                            <a class="Link" [href]="examplesUrl[i]">{{link.Title}}</a>
+                            <div class="source" [innerHTML]="link.Source"></div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div *ngIf="section.FinalText" class="section__final-text">
+                    <p class="section__text static-page-paragraph-text" [innerHTML]="section.FinalText" routeTransformer></p>
+                </div>
             </div>
 
             <div class="section__people-list" *ngIf="section.PeopleList?.length">
@@ -34,6 +51,16 @@
                              [alt]="section.ImageAlt">
                         <figcaption class="person__label" [innerHTML]="person"></figcaption>
                     </figure>
+                </ng-container>
+            </div>
+
+            <div class="section__links" *ngIf="section.Links?.length && linksMap">
+                <ng-container *ngFor="let link of section.Links">
+                    <a *ngIf="link.label && linksMap[link.key]"
+                       class="Link static-page-paragraph-text"
+                       [href]="linksMap[link.key]"
+                       target="_blank">{{link.label}}
+                    </a>
                 </ng-container>
             </div>
         </div>
