--- a/ddp-workspace/projects/ddp-circadia/src/styles/_activity.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/styles/_activity.scss
@@ -57,10 +57,36 @@
     margin: 0.75em 0;
 
     padding-left: 1.5em;
+
+    li {
+      margin: 0.75em 0;
+    }
   }
 
   .paragraph {
     margin: 0.75em 0;
+  }
+
+  .activity-image {
+    height: 32rem;
+
+    margin: 1em 0;
+
+    img {
+      display: block;
+
+      height: 100%;
+
+      margin: 0 auto;
+    }
+  }
+
+  .activity-video {
+    display: block;
+
+    width: 100%;
+
+    margin: 1em auto;
   }
 
   /*
