Add more styles for File Upload

--- a/ddp-workspace/projects/ddp-basil/src/styles.scss
+++ b/ddp-workspace/projects/ddp-basil/src/styles.scss
@@ -1,3 +1,8 @@
 @import './theme.scss';
 @import './styles/activity.scss';
 @import './styles/password.scss';
+@import './styles/file-upload.scss';
+
+body {
+    font-family: 'Nunito', sans-serif;
+}
