--- a/ddp-workspace/projects/ddp-pancan/src/app/components/anchors-page/anchors-page.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/anchors-page/anchors-page.component.scss
@@ -59,6 +59,7 @@
 
     &__title {
         margin: 0;
+        flex: 0 0;
     }
 
     &__description {
@@ -71,7 +72,7 @@
 
     &__img-milestones {
         margin-left: -20px;
-        width: 100%;
+        width: 105%;
     }
 
     &__people-list {
@@ -92,6 +93,33 @@
             }
         }
     }
+
+    &__links {
+        display: flex;
+        flex-direction: column;
+        width: 48.75rem;
+
+        > a {
+            opacity: 1;
+            line-height: 2.75rem;
+        }
+    }
+
+    &__examples {
+        opacity: 1;
+
+        li {
+            margin-bottom: 2rem;
+        }
+
+        .source {
+            display: inline;
+        }
+    }
+
+    &__final-text {
+        margin-top: 3rem;
+    }
 }
 
 @media screen and (max-width: $desktop-breakpoint) {
@@ -104,7 +132,8 @@
             width: 20%;
         }
 
-        &__description {
+        &__description,
+        &__links {
             width: 73%;
         }
     }
@@ -122,7 +151,9 @@
             gap: 1rem;
         }
 
-        &__title, &__description {
+        &__title,
+        &__description,
+        &__links {
             width: 100%;
         }
 
