--- a/ddp-workspace/projects/ddp-circadia/src/app/components/user-activities/user-activities.component.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/user-activities/user-activities.component.scss
@@ -2,6 +2,32 @@
 
 .mat-table {
   width: 100%;
+
+  @media (max-width: 720px) {
+    display: block;
+  }
+}
+
+.mat-header-row {
+  @media (max-width: 720px) {
+    display: none;
+  }
+}
+
+.mat-row {
+  @media (max-width: 720px) {
+    display: flex;
+    flex-flow: column nowrap;
+
+    height: auto;
+
+    box-shadow: 0 2px 16px rgba(0, 0, 0, 0.07);
+    border-radius: 6px;
+
+    &:not(:last-of-type) {
+      margin-bottom: 2.4rem;
+    }
+  }
 }
 
 .mat-cell,
@@ -12,30 +38,71 @@
   padding-bottom: 1.6rem !important;
   padding-left: 2.4rem !important;
 
+  @media (max-width: 720px) {
+    padding: 2.4rem !important;
+  }
+
   &:last-of-type {
     padding-right: 2.4rem !important;
+
+    @media (max-width: 720px) {
+      border: none;
+    }
+  }
+}
+
+.mobile-column-name {
+  display: none;
+
+  @media (max-width: 720px) {
+    display: block;
+
+    margin-bottom: 0.8rem;
+
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.54);
   }
 }
 
 .mat-column-name {
   width: 20%;
+
+  @media (max-width: 720px) {
+    width: 100%;
+  }
 }
 
 .mat-column-summary {
   width: 40%;
+
+  @media (max-width: 720px) {
+    width: 100%;
+  }
 }
 
 .mat-column-status {
   width: 20%;
+
+  @media (max-width: 720px) {
+    width: 100%;
+  }
 }
 
 .mat-column-actions {
   width: 20%;
+
+  @media (max-width: 720px) {
+    width: 100%;
+  }
 }
 
 .activity-status {
   display: flex;
   align-items: center;
+
+  @media (max-width: 720px) {
+    align-items: flex-start;
+  }
 }
 
 .status-icon {
