Fix styles for mbc study (for mobiles)

--- a/ddp-workspace/projects/ddp-mbc/src/styles.scss
+++ b/ddp-workspace/projects/ddp-mbc/src/styles.scss
@@ -382,7 +382,6 @@ mat-icon.ddp-dropdown-arrow {
 }
 
 @media only screen and (max-width: 1380px) {
-
     .Header-logoText,
     .Footer-logoText {
         margin: 10px 0 0 10px;
@@ -407,7 +406,6 @@ mat-icon.ddp-dropdown-arrow {
 }
 
 @media only screen and (max-width: 1024px) {
-
     .Header-logoImg,
     .Footer-logoImg {
         height: 60px;
@@ -419,18 +417,22 @@ mat-icon.ddp-dropdown-arrow {
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
     .Header {
         min-height: 75px;
     }
 
     .Header,
     .Footer {
-        padding: 0 20px 5px 20px;
+        padding: 0 20px 5px 20px !important;
+    }
+
+    .CountButton {
+        padding: 5px 12px;
     }
 
     .Header-navItem {
-        padding: 0 0 0 10px;
+        padding: 0 0 0 10px !important;
     }
 }
 
@@ -785,7 +787,6 @@ mat-icon.ddp-dropdown-arrow {
 }
 
 @media only screen and (max-width: 450px) {
-
     .PageContent-ol li,
     .PageContent-ul li {
         padding: 0 0 0 15px;
@@ -885,6 +886,12 @@ mat-icon.ddp-dropdown-arrow {
     .PageHeader-subTitle {
         font-size: 0.8rem;
         line-height: 1.2rem;
+    }
+
+    .language-selector {
+        position: absolute;
+        top: 65px;
+        right: 12px;
     }
 }
 
@@ -1468,7 +1475,7 @@ ul {
     }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 520px) {
     .user-menu-panel {
         display: block;
 
@@ -1478,7 +1485,7 @@ ul {
     }
 
     .user-menu-header {
-        display: none;
+        display: none !important;
         padding: 0;
     }
 }
