--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.html
@@ -30,7 +30,7 @@
             [disabled]="readonly"
             class="add-btn button button_primary"
             (click)="createChildInstance()">
-        <img src="assets/shared/add-person.svg" class="icon" [alt]="block.addButtonText">
+        <img lazy-resource src="assets/shared/add-person.svg" class="icon" [alt]="block.addButtonText">
         <span class="text">{{block.addButtonText}}</span>
     </button>
 </div>
