--- a/ddp-workspace/projects/ddp-cgc/src/app/components/activity/activity.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/activity/activity.component.html
@@ -39,7 +39,7 @@
         (embeddedComponentsValidationStatus)="
           updateEmbeddedComponentValidationStatus(0, $event)
         "
-        (embeddedComponentBusy)="embeddedComponentBusy$[0].next($event)"
+        (componentBusy)="embeddedComponentBusy$[0].next($event)"
       >
       </ddp-activity-section>
     </section>
@@ -54,7 +54,7 @@
         (embeddedComponentsValidationStatus)="
           updateEmbeddedComponentValidationStatus(1, $event)
         "
-        (embeddedComponentBusy)="embeddedComponentBusy$[1].next($event)"
+        (componentBusy)="embeddedComponentBusy$[1].next($event)"
       >
       </ddp-activity-section>
     </section>
@@ -69,7 +69,7 @@
         (embeddedComponentsValidationStatus)="
           updateEmbeddedComponentValidationStatus(2, $event)
         "
-        (embeddedComponentBusy)="embeddedComponentBusy$[2].next($event)"
+        (componentBusy)="embeddedComponentBusy$[2].next($event)"
       >
       </ddp-activity-section>
     </section>
