Remove debug stuff

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity.component.html
@@ -142,10 +142,10 @@
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div *ngIf="displayGlobalError$ | async" class="ErrorMessage">
-                            Q11<span translate>SDK.ValidateError</span>
+                            <span translate>SDK.ValidateError</span>
                         </div>
                         <div *ngIf="communicationErrorOccurred" class="ErrorMessage">
-                            Q12<span translate>SDK.CommunicationError</span>
+                            <span translate>SDK.CommunicationError</span>
                         </div>
                     </div>
                 </div>
