DDP-6526 fix styles for pancan header and footer after language selector appears

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.html
@@ -9,7 +9,10 @@
             </button>
             <app-navigation></app-navigation>
         </div>
-        <app-auth class="auth"></app-auth>
+        <div class="auth">
+            <ddp-language-selector></ddp-language-selector>
+            <app-auth></app-auth>
+        </div>
     </div>
     <div class="info">
         <span translate>App.Footer.Copyright</span>
