--- a/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.html
@@ -7,15 +7,19 @@
             <span class="project-logo__text" [innerHTML]="'App.Header.Logo.Title' | translate"></span>
         </a>
         <app-navigation class="nav"></app-navigation>
-        <app-auth class="auth"></app-auth>
-        <button class="hamburger hamburger--slider" [ngClass]="{'is-active': isPanelOpened}"
-                [attr.aria-label]="'Common.Buttons.HeaderMenu.AriaLabel' | translate" (click)="openCloseMenu()">
+        <div class="controls">
+            <ddp-language-selector></ddp-language-selector>
+            <app-auth></app-auth>
+            <button class="hamburger hamburger--slider" [ngClass]="{'is-active': isPanelOpened}"
+                    [attr.aria-label]="'Common.Buttons.HeaderMenu.AriaLabel' | translate" (click)="openCloseMenu()">
             <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
             </span>
-        </button>
+            </button>
+        </div>
     </div>
     <div class="panel-controls">
         <app-navigation class="nav"></app-navigation>
+        <app-auth></app-auth>
     </div>
 </header>
