--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -9,7 +9,6 @@ body {
     height: 100vh;
     font-size: 16px;
     font-weight: 400;
-    min-width: 390px;
 }
 
 html {
@@ -57,8 +56,19 @@ a {
 
 .SimpleButton {
     @extend .btn-common;
-    @extend .btn-outline;
     @extend .btn-auth;
+
+    background-color: transparent;
+    border-width: 0;
+
+    ddp-sign-in-out & {
+        @extend .btn-outline;
+    }
+
+    ddp-language-selector & {
+        display: flex;
+        align-items: center;
+    }
 
     .footer & {
         color: white;
