--- a/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.scss
@@ -14,6 +14,10 @@ $footer-divider-color: #444444;
     font-size: 1.17rem;
     padding: 1.15rem 2rem 1.15rem 3.375rem;
 
+    &__wrapper {
+        display: flex;
+    }
+
     ::ng-deep.navigation {
         padding-left: 0;
     }
@@ -85,7 +89,6 @@ $footer-divider-color: #444444;
     .actions {
         &__wrapper {
             flex-direction: column;
-            display: flex;
         }
 
         ::ng-deep.navigation {
