DDP-6487: Fix validations which take hidden questions into account (#691)
* Fix not needed image download

  when the image has css `display: none`

* Fix console error

* Fix a bug when validations take hidden questions into account

* Remove unused `updateVisibility` method from baseActivity component

* Fix output parameter name

* Remove debug stuff

* Add idPrefix in order to have unique ids

* Fix naming

--- a/ddp-workspace/projects/ddp-cgc/src/app/components/activity/activity.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/activity/activity.component.html
@@ -36,11 +36,10 @@
         [validationRequested]="validationRequested"
         [studyGuid]="studyGuid"
         [activityGuid]="activityGuid"
-        (visibilityChanged)="updateVisibility($event)"
         (embeddedComponentsValidationStatus)="
           updateEmbeddedComponentValidationStatus(0, $event)
         "
-        (embeddedComponentBusy)="embeddedComponentBusy$[0].next($event)"
+        (componentBusy)="embeddedComponentBusy$[0].next($event)"
       >
       </ddp-activity-section>
     </section>
@@ -52,11 +51,10 @@
         [validationRequested]="validationRequested"
         [studyGuid]="studyGuid"
         [activityGuid]="activityGuid"
-        (visibilityChanged)="updateVisibility($event)"
         (embeddedComponentsValidationStatus)="
           updateEmbeddedComponentValidationStatus(1, $event)
         "
-        (embeddedComponentBusy)="embeddedComponentBusy$[1].next($event)"
+        (componentBusy)="embeddedComponentBusy$[1].next($event)"
       >
       </ddp-activity-section>
     </section>
@@ -68,11 +66,10 @@
         [validationRequested]="validationRequested"
         [studyGuid]="studyGuid"
         [activityGuid]="activityGuid"
-        (visibilityChanged)="updateVisibility($event)"
         (embeddedComponentsValidationStatus)="
           updateEmbeddedComponentValidationStatus(2, $event)
         "
-        (embeddedComponentBusy)="embeddedComponentBusy$[2].next($event)"
+        (componentBusy)="embeddedComponentBusy$[2].next($event)"
       >
       </ddp-activity-section>
     </section>
