--- a/ddp-workspace/projects/ddp-cgc/src/app/components/login/login.component.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/login/login.component.scss
@@ -6,9 +6,9 @@
   &-item {
     padding: 0 0 0 30px;
     &__link {
-      padding-right: 15px;
+      margin-right: 15px;
       &_active {
-        display: none;
+        border-bottom: #fff solid 2px;
       }
     }
   }
@@ -24,7 +24,7 @@
       padding: 0 0 0 30px;
 
       &__link {
-        padding-right: 0;
+        margin-right: 0;
       }
     }
   }
