--- a/ddp-workspace/projects/ddp-cgc/src/app/components/user-activities/user-activities.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/user-activities/user-activities.component.html
@@ -1,3 +1,5 @@
+<h2>{{ 'UserActivities.Title' | translate }}</h2>
+
 <table mat-table [dataSource]="activities">
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>
