Rare-X / RefId 108: update date format on dashboard to include year

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/activities-list/activities-list.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/activities-list/activities-list.component.html
@@ -37,7 +37,7 @@
       *matCellDef="let activity"
       [attr.data-label]="'SDK.UserActivities.ActivityDate' | translate"
     >
-      {{ activity.createdAt | date: 'MM/dd' }}
+      {{ activity.createdAt | date: 'MM/dd/yyyy' }}
     </td>
   </ng-container>
 
