Rare-X: Editable activities section navigation & last section index

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/activity-page/activity-page.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/activity-page/activity-page.component.html
@@ -16,6 +16,7 @@
       [studyGuid]="studyGuid"
       [activityGuid]="instanceGuid"
       [isInitiallyReadonly]="isReadonly"
+      [hasPreviousInstance]="hasPreviousInstance"
       (submit)="onSubmit($event)"
     ></app-activity>
   </div>
