Rare-X: Fix editable activities status in workflow progress

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/workflow-progress/workflow-progress.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/workflow-progress/workflow-progress.component.html
@@ -28,7 +28,7 @@
           "
         >
           <span class="workflow-progress-step__step-count" translate>
-            {{ 'Activities.StatusCodes.' + activity.statusCode }}
+            {{ 'Activities.StatusCodes.' + getActivityStatusCode(activity) }}
           </span>
           <p class="workflow-progress-step__step-name">
             {{ activity.activityName }}
